[package]
name = "test_retry"
version = "0.1.0"
authors = ["Casper Beyer"]
edition = "2018"
license = "MIT"
repository = "https://github.com/caspervonb/test_retry"
description = "Atttribute macro for retrying a test multiple times"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
